# mcp-for-stata

./: .gitignore  .mcp.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.es.md  README.fr.md  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  index.html  mkdocs.yml  pyproject.toml  server.json  sitemap.xml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/rules/: ai-driven-coding.md
.claude/skills/: .gitignore
.claude/skills/mcp-smoke-test/: examples.md
.codex/: config.toml
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_cn.md  config.yml
.github/workflows/: docker-publish.yml  gh-pages.yml  lint.yml  python-package.yml  release-binaries.yml
agents/: index.html
agents/claude_code/: index.html
agents/claude_science/: index.html
agents/codex/: index.html
agents/openclaw/: index.html
api/overview/: index.html
beta/: index.html
claude-plugin/: index.html
cli/: index.html
clients/: index.html
configuration/: index.html
core/stata/do/: index.html
core/stata/finder/: index.html
core/stata/help/: index.html
core/stata/package/: index.html
docs/: beta.md  beta.zh.md  claude-plugin.md  claude-plugin.zh.md  cli.md  cli.zh.md  clients.md  clients.zh.md  configuration.md  configuration.zh.md  docker.md  docker.zh.md  index.md  index.zh.md  monitoring.md  monitoring.zh.md  overview.md  overview.zh.md  security.md  security.zh.md  troubleshooting.md  troubleshooting.zh.md  usage.md  usage.zh.md
docs/agents/: claude_code.md  claude_code.zh.md  claude_science.md  claude_science.zh.md  codex.md  codex.zh.md  index.md  index.zh.md  openclaw.md  openclaw.zh.md
docs/api/: overview.md  overview.zh.md
docs/core/stata/: do.md  do.zh.md  finder.md  finder.zh.md  help.md  help.zh.md  package.md  package.zh.md
docs/mcp/: resources.md  resources.zh.md  tools.md  tools.zh.md
docs/skills/: openclaw.md
mcp/resources/: index.html
mcp/tools/: index.html
monitoring/: index.html
overview/: index.html
plugins/stata-toolbox/: mcp.json  plugin.json
scripts/: install.bat  install.command  install.ps1  install.sh
search/: search_index.json
security/: index.html
skills/openclaw/: index.html
src/stata_mcp/: __init__.py  _data_info_metrics.py  _diagnostic_logging.py  config.py  mcp_servers.py
src/stata_mcp/agent_as/: repl_agents.py
src/stata_mcp/api/: __init__.py  _runtime.py  ado_install.py  get_data_info.py  read_log.py  stata_do.py  stata_help.py  write_dofile.py
tests/: README.md  conftest.py  download_data.py  test_ado_install_cli.py  test_async_do.py  test_config_migration.py  test_config_security.py  test_config_tool_context.py  test_diagnostic_logging.py  test_get_data_info_security.py  test_guard_data_path_auditor.py  test_guard_validator.py  test_input_validation.py  test_install.py  test_installer_backup.py  test_mcp_servers_security_log.py  test_parse_dofile.py  test_read_log_security.py  test_server_parser.py  test_server_registration.py  test_stata_controller.py  test_stata_do_boundary.py  test_stata_do_timeout.py  test_stata_help_interfaces.py  test_stata_help_security.py  test_verify.py
tests/api/: test_get_data_info_logging.py  test_get_data_info_mcp_stdio.py  test_read_log_security.py
tests/cli/: test_ado_install.py  test_install.py  test_server_registration.py  test_tool_config.py  test_verify.py
tests/data_info/: test_base.py  test_dta.py  test_security.py  test_spss.py  test_xlsx.py
tests/guard/: test_data_path_auditor.py  test_validator.py  test_validator_data_commands.py
tests/stata/: test_do_boundary.py  test_do_timeout.py  test_help_interfaces.py  test_log_smcl.py
tests/utils/: test_color_stream.py
troubleshooting/: index.html
usage/: index.html
zh/: index.html
zh/agents/: index.html
zh/beta/: index.html
zh/claude-plugin/: index.html
zh/cli/: index.html
zh/clients/: index.html
zh/configuration/: index.html
zh/monitoring/: index.html
zh/overview/: index.html
zh/security/: index.html
zh/troubleshooting/: index.html
zh/usage/: index.html
(+87 files in other folders)
