[project]
name = "stata-mcp"
version = "1.17.2"
description = "Let LLM help you achieve your regression analysis with Stata"
readme = "README.md"
authors = [
    { name = "Song Tan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
keywords = ["stata", "mcp", "econometrics", "ai", "agent", "computational social science"]
dependencies = [
    "python-dotenv>=1.2.2",
    "mcp[cli]>=1.27.1",
    "pandas>=3.0.0,<4.0.0",
    "pexpect>=4.9.0",
    "openpyxl>=3.1.5",
    "pathvalidate>=3.3.1",
    "psutil>=7.2.2",
    "pyreadstat>=1.3.4",
    "requests>=2.34.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
stata-mcp = "stata_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

agents = [
    "openai>=1.109.1",
    "openai-agents>=0.3.2",
    "openai-api-polling>=0.1.5",
]

ui = [
    "mcp-ui-server>=1.0.0",
]

all = [
    {include-group = "agents"},
    {include-group = "ui"},
]

[project.urls]
Homepage = "https://www.statamcp.com"
Documentation = "https://docs.statamcp.com"
Source = "https://github.com/sepinetam/stata-mcp"
Issues = "https://github.com/sepinetam/stata-mcp/issues"
Changelog = "https://github.com/sepinetam/stata-mcp/blob/master/CHANGELOG.md"
