[project]
name = "stata-mcp"
version = "1.21.1"
description = "MCP-for-Stata: one-command install of a Stata MCP server for Claude Code, Codex, OpenClaw, and 7+ AI agents. Run Stata do-files through natural language."
readme = "README.md"
authors = [
    { name = "Song Tan", email = "sepinetam@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
keywords = [
    "stata",
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "claude-code",
    "codex",
    "openclaw",
    "ai-agent",
    "agent",
    "econometrics",
    "causal-inference",
    "did",
    "regression",
    "empirical-research",
    "data-analysis",
    "do-file",
    "ado",
    "computational-social-science",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Sociology",
    "Topic :: Education",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.27.1",
    "pandas>=3.0.0,<4.0.0",
    "pexpect>=4.9.0",
    "openpyxl>=3.1.5",
    "psutil>=7.2.2",
    "pyreadstat>=1.3.4",
    "requests>=2.34.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
stata-mcp = "stata_mcp.cli:main"

[build-system]
requires = ["uv-build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.nuitka]
main = "src/stata_mcp/cli.py"
output-filename = "stata-mcp"
include-package = [
    "stata_mcp",
    "mcp",
    "pandas",
    "pyreadstat",
    "openpyxl",
    "pexpect",
    "psutil",
    "requests",
    "dotenv",
    "pathvalidate",
    "tomli_w",
]
assume-yes-for-downloads = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

build = [
    "nuitka>=4.1.3",
    "uv-build>=0.11.28",
]

agents = [
    "openai>=1.109.1",
    "openai-agents>=0.3.2",
    "openai-api-polling>=0.1.5",
]

ui = [
    "mcp-ui-server>=1.0.0",
]

all = [
    {include-group = "agents"},
    {include-group = "ui"},
]

[project.urls]
Homepage = "https://www.aidea-labs.com/mcp-for-stata"
Documentation = "https://sepinetam.github.io/mcp-for-stata"
Source = "https://github.com/sepinetam/mcp-for-stata"
Issues = "https://github.com/sepinetam/mcp-for-stata/issues"
Changelog = "https://github.com/sepinetam/mcp-for-stata/blob/master/CHANGELOG.md"
